loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:14: error: ';' expected but 'if' found.
  }if (sortieTrouvee()){
   ^