loopdowhile.Poucet1.scala.code
var sortie : Booleean = false
while (sortie == false) {
  var nbBiscuit : Int = 0
  for (i<- 1 to 5 ){
    if (estSurBiscuit == true) {
      bnBiscuit += 1
    }
    avance()
  }
  if (nbBiscuit >= 3) {
    gauche
  }else {
    droite()
  }if (sortieTrouvee()){
    sortie = true
  } 
}
avance()
